err/cumin.err
Listing '.'...
Listing './bin'...
Listing './etc'...
Listing './etc/clustershell'...
Listing './etc/clustershell/groups.conf.d'...
Listing './etc/clustershell/groups.d'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ClusterShell'...
Listing './lib/python3.5/site-packages/ClusterShell/CLI'...
Compiling './lib/python3.5/site-packages/ClusterShell/CLI/Clubak.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/CLI/Clubak.py", line 123
    print "INPUT %s" % linestripped
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ClusterShell/CLI/Clush.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/CLI/Clush.py", line 483
    except KeyboardInterrupt, kbe:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/CLI/Config.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/CLI/Config.py", line 98
    except ValueError, exc:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/CLI/Display.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/CLI/Display.py", line 242
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ClusterShell/CLI/Error.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/CLI/Error.py", line 60
    except EngineNotSupportedError, exc:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/CLI/Nodeset.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/CLI/Nodeset.py", line 105
    print group
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ClusterShell/CLI/Utils.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/CLI/Utils.py", line 31
    except GroupResolverConfigError, exc:
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/Communication.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/Communication.py", line 215
    except SAXParseException, ex:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/Defaults.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/Defaults.py", line 44
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ClusterShell/Engine'...
Compiling './lib/python3.5/site-packages/ClusterShell/Engine/EPoll.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/Engine/EPoll.py", line 119
    except IOError, ex:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/Engine/Engine.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/Engine/Engine.py", line 278
    raise ValueError, "Engine client timer not found in timer queue"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/Engine/Poll.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/Engine/Poll.py", line 114
    except select.error, (ex_errno, ex_strerror):
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/Engine/Select.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/Engine/Select.py", line 120
    except select.error, (ex_errno, ex_strerror):
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/Gateway.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/Gateway.py", line 202
    except MessageProcessingError, ex:
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/NodeSet.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/NodeSet.py", line 260
    except (TypeError, ValueError), exc:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/NodeUtils.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/NodeUtils.py", line 291
    except ImportError, exc:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/RangeSet.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/RangeSet.py", line 460
    raise TypeError, \
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/Task.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/Task.py", line 754
    except EngineAbortException, exc:
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ClusterShell/Worker'...
Compiling './lib/python3.5/site-packages/ClusterShell/Worker/EngineClient.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/Worker/EngineClient.py", line 319
    except OSError, exc:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/Worker/Exec.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/Worker/Exec.py", line 59
    except (KeyError, ValueError), error:
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/Worker/Pdsh.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/Worker/Pdsh.py", line 144
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/Worker/Tree.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/Worker/Tree.py", line 312
    except OSError, exc:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClusterShell/Worker/fastsubprocess.py'...
***   File "./lib/python3.5/site-packages/ClusterShell/Worker/fastsubprocess.py", line 405
    except select.error, ex:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ClusterShell-1.7.3.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/cumin'...
Listing './lib/python3.5/site-packages/cumin/backends'...
Compiling './lib/python3.5/site-packages/cumin/cli.py'...
***   File "./lib/python3.5/site-packages/cumin/cli.py", line 188
    os.makedirs(file_path, 0770)
                              ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/cumin/transports'...
Listing './lib/python3.5/site-packages/cumin-1.3.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.1.10.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tqdm'...
Listing './lib/python3.5/site-packages/tqdm-4.19.5.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/cumin'...
Listing './share/doc/cumin/examples'...
Listing './share/python-wheels'...
